Adicionando cachorro fofo

--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
         </div>
         <p>Cada aluno deve copiar e editar um bloco acima com suas informações.</p>
     </seção>
-
     <button class="btn">Saiba mais sobre GitHub</button>
+    <img src="https://picsum.photos/id/237/200/300
+    " alt="Cachorrinho">
+    <img src="https://picsum.photos/seed/picsum/200/300" alt="aleatorio">
 </principal>
 
 <rodapé>
