--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <h2>Perfis dos Alunos</h2>
         <div class="perfil-container">
             <div class="perfil">
-                <img class="foto" src="[URL da foto do aluno]" alt="Foto do Aluno">
-                <h3>Nome do Aluno</h3>
-                <p>Curso: [Nome do Curso]</p>
-                <p><a href="[URL do GitHub]" target="_blank">GitHub</a></p>
+                <img class="foto" src="fotoPG.png" alt="Foto do Aluno">
+                <h3>Pedro Gabriel</h3>
+                <p>Curso: Desenvolvimento de Sistemas</p>
+                <p><a href="[URL do GitHub]" target="_blank">https://github.com/PedroGabriel24/HandsON3</a></p>
             </div>
         </div>
         <p>Cada aluno deve copiar e editar um bloco acima com suas informações.</p>
