--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2>Perfis dos Alunos</h2>
         <div class="perfil-container">
             <div class="perfil">
-                <img class="foto" src="fotoPG.png" alt="Foto do Aluno">
+                <img class="foto" src="PG.jpeg" alt="Foto do Aluno">
                 <h3>Pedro Gabriel</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
                 <p><a href="[URL do GitHub]" target="_blank">https://github.com/PedroGabriel24/HandsON3</a></p>
