Adicionando cachorro fofo

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
                 <p><a href="[URL do GitHub]" target="_blank">https://github.com/PedroGabriel24/HandsON3</a></p>
             </div>
         </div>
+        
+        <div class="perfil-container">
+            <div class="perfil">
+                <img class="foto" src="felix.jpg" alt="Foto do Aluno">
+                <h3>Felpe Fernandes</h3>
+                <p>Curso: 2º TECH DS</p>
+                <p><a href="https://github.com/rkhue" target="_blank">GitHub</a></p>
+            </div>
+        </div>
+
+        <p>Cada aluno deve copiar e editar um bloco acima com suas informações.</p>
+        <img src="https://picsum.photos/id/237/200/300" alt="Cachorrinho">
+        <img src="https://picsum.photos/seed/picsum/200/300" alt="aleatorio">
+
+    </seção>
+        <button class="btn">Saiba mais sobre GitHub</button>
+
         <p>Desenvolvido por Pedro Henrique Vicente Duarte</p>
     </section>
 </main>
