--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="perfil-container">
             <div class="perfil">
                 <img class="foto" src="Captura de tela 2025-02-12 110712.png" alt="Pedro Henrique Vicente Duarte">
-                <h3>Pedro Henrique Vicente Duarte</h3>
+                <h3>Pedro Henrique</h3>
                 <p> Curso: Desenvolvimento de Sistemas </p>
                 <p><a href="https://github.com/PedroHenriqueDuart3" target="_blank">GitHub</a></p>
             </div>
@@ -91,18 +91,18 @@
               <img class="foto" src="PG.jpeg" alt="Foto do Aluno">
                 <h3>Pedro Gabriel</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
-                <p><a href="[URL do GitHub]" target="_blank">https://github.com/PedroGabriel24/HandsON3</a></p>
+                <p><a href="https://github.com/PedroGabriel24/HandsON3" target="_blank">GitHub</a></p>
             </div>
           <div class="perfil">
                 <img class="foto" src="./Captura de tela 2024-10-04 173750.png" alt="Foto do Aluno">
-                <h3>Nome do Aluno</h3>
-                <p>Curso: [Nome do Curso]</p>
-                <p><a href="[URL do GitHub]" target="_blank">GitHub</a></p>
+                <h3>Gustavo Jovelli</h3>
+                <p>Curso: Desenvolvimento de Sistemas</p>
+                <p><a href="https://github.com/PedroGabriel24/HandsON3" target="_blank">GitHub</a></p>
            </div>
             <div class="perfil">
                 <img class="foto" src="felix.jpg" alt="Foto do Aluno">
-                <h3>Felpe Fernandes</h3>
-                <p>Curso: 2º TECH DS</p>
+                <h3>Felipe Fernandes</h3>
+                <p>Curso: Desenvolvimento de Sistemas</p>
                 <p><a href="https://github.com/rkhue" target="_blank">GitHub</a></p>
             </div>
         </div>
