Adicionando o meu card

--- a/index.html
+++ b/index.html
@@ -105,13 +105,20 @@
                 <p>Curso: Desenvolvimento de Sistemas</p>
                 <p><a href="https://github.com/rkhue" target="_blank">GitHub</a></p>
             </div>
+            <div class="perfil">
+                <img class="foto" src="WIN_20250212_10_50_55_Pro.jpg" alt="Taxiotti">
+                <h3>Lucas Taxiotti</h3>
+                <p>Curso: Desenvolvimento de Sistemas</p>
+                <p><a href="https://github.com/taxiotti" target="_blank">GitHub</a></p>
+            </div>
         </div>
 
     </section>
 
-    <button class="btn">Saiba mais sobre GitHub</button>
     <img src="https://picsum.photos/id/237/200/300" alt="Cachorrinho">
     <img src="https://picsum.photos/seed/picsum/200/300" alt="aleatorio">
+    <br>
+    <button class="btn">Saiba mais sobre GitHub</button>
 </main>
 
 <footer>
