--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #1f1b27;
             color: #ffffff;
             padding: 15px;
             text-align: center;
@@ -28,7 +28,7 @@
             justify-content: center;
         }
         .perfil {
-            background-color: #ffffff;
+            background-color: #8dbbfc;
             padding: 15px;
             margin: 10px;
             border-radius: 8px;
@@ -44,7 +44,7 @@
             margin-bottom: 10px;
         }
         .btn {
-            background-color: #4CAF50;
+            background-color: #8dbbfc;
             color: #ffffff;
             padding: 10px 20px;
             border: none;
@@ -58,7 +58,7 @@
             background-color: #45a049;
         }
         footer {
-            background-color: #45a049;
+            background-color: #1f1b27;
             color: #ffffff;
             text-align: center;
             padding: 10px;
