--- a/index.html
+++ b/index.html
@@ -85,30 +85,35 @@
                 <img class="foto" src="Captura de tela 2025-02-12 110712.png" alt="Pedro Henrique Vicente Duarte">
                 <h3>Pedro Henrique</h3>
                 <p> Curso: Desenvolvimento de Sistemas </p>
+                <p>Hobby: Tocar Instrumentos Musicais </p>
                 <p><a href="https://github.com/PedroHenriqueDuart3" target="_blank">GitHub</a></p>
             </div>
             <div class="perfil">
               <img class="foto" src="PG.jpeg" alt="Foto do Aluno">
                 <h3>Pedro Gabriel</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
+                <p>Hobby: Jogar Basquete </p>
                 <p><a href="https://github.com/PedroGabriel24/HandsON3" target="_blank">GitHub</a></p>
             </div>
           <div class="perfil">
                 <img class="foto" src="./Captura de tela 2024-10-04 173750.png" alt="Foto do Aluno">
                 <h3>Gustavo Jovelli</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
+                <p>Hobby: Escutar música Japonesa e Jogar Videogame </p>
                 <p><a href="https://github.com/PedroGabriel24/HandsON3" target="_blank">GitHub</a></p>
            </div>
             <div class="perfil">
                 <img class="foto" src="felix.jpg" alt="Foto do Aluno">
                 <h3>Felipe Fernandes</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
+                <p>Hobby: Fazer Poema </p>
                 <p><a href="https://github.com/rkhue" target="_blank">GitHub</a></p>
             </div>
             <div class="perfil">
                 <img class="foto" src="WIN_20250212_10_50_55_Pro.jpg" alt="Taxiotti">
                 <h3>Lucas Taxiotti</h3>
                 <p>Curso: Desenvolvimento de Sistemas</p>
+                <p>Hobby: Jogar Videogame </p>
                 <p><a href="https://github.com/taxiotti" target="_blank">GitHub</a></p>
             </div>
         </div>
